--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,30 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# IntelliJ IDEA
+.idea/
+*.iml
+*.iws
+
+# Java
+*.class
+
+# Maven
+# Either ignore the target directory (standard Maven convention) or specific files
+target/
+# Uncomment below for specific files inside target if the above line is not used
+# /target/*.jar
+# /target/*.war
+# /target/*.ear
+
+# Gradle (if used)
+.gradle/
+build/
+
+# Mac (if applicable)
+.DS_Store
+
+# Log files
+*.log
+log/
